# Mantis

./: README.md
Low Level codes/: Motor_controller.ino
joy_py/: CMakeLists.txt  package.xml
joy_py/src/: joy_bot.py
rplidar_ros/launch/: rplidar.launch
rplidar_ros/rviz/: rplidar.rviz
rplidar_ros/src/: lidar_filter.py  node.cpp
wc_navigation/: CMakeLists.txt  package.xml
wc_navigation/bags/: IHub_room1.bag
wc_navigation/launch/: amcl.launch  map_hector.launch  move_base.launch  wc_bci.launch  wc_navigation.launch
wc_navigation/maps/: robotics_1.yaml  test_1.yaml  test_2.yaml  test_3.yaml
wc_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
wc_navigation/rviz/: wc_navigation.rviz  wc_navigation_exp.rviz
wc_navigation/src/: goal_set.py  odom_base.py  odom_pub.py  sock.py  test.py
